Allow search by terms instead of hardcoded value

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div id="searchCard" class="card">
-      <h1>BOE & BORME Coruña Extractor</h1>
-      <p>Select a date to search for Coruña-related items in the BOE and BORME.</p>
+      <h1>BOE & BORME Extractor</h1>
+      <p>Select a date and search term to find items in the BOE and BORME.</p>
+      <label for="searchTerm">Search Term</label>
+      <input id="searchTerm" type="text" placeholder="Coruña" value="Coruña" />
       <label for="datePicker">Date</label>
       <input id="datePicker" type="date" />
       <button id="saveButton" type="button">Search</button>
